# minimal_discrete_match

./: .gitignore  README.md  csv_to_mdm.ipynb  gsd.csv  literature_comparison.ipynb  pyproject.toml  sieve_data.csv
.claude/: settings.local.json
manim_expl_2/: .gitignore  GSD_comb.pptx  _temp_notes.md  storyboard.md  ~$GSD_comb.pptx
manim_expl_2/scenes/: _common.py  continuum_reveal.py  defining_s.py  full_video_v2.py  pile_to_gsd.py  poster_scene.py  quantity_ratio.py  scene1_title.py  scene2_mass.py  scene3_volume.py  scene4_quantity.py  scene5_verification.py  verification.py
manim_exploration/: NOTES.md  README.md  SESSION.md  storyboard.md  visualization_ideas.md
manim_exploration/scenes/: _common.py  continuum_reveal.py  defining_s.py  full_video.py  pile_to_gsd.py  quantity_ratio.py  ratios.py  rounding.py  sieve_stack.py  spanned_integer.py  verification.py
manim_exploration/slides/: index.html
mdm_notebooks/: gs_builder.py  mdm_notebook.py  temp_notes.md  viz_experiments.py
mdm_notebooks/.claude/: settings.local.json
minimal_packing_manuscript/: harvard-anglia-ruskin-university.csl  minimal_packing.docx  minimal_packing.qmd  references.bib
minimal_packing_poster/: cmlkirsa4129c0qy1p2e5rt4e-icsmge-2026-template-poster-a0.pptx  poster.typ
minimal_packing_poster/assets/: template_spec.md
minimal_packing_poster/scripts/: render_concept_figures.py  render_figures.py
src/gsd_lib/: uscs.py
