[project]
name = "gsd-lib"
version = "0.1.0"
description = "Discrete analytical mechanics library for grain size distributions"
readme = "README.md"
authors = [
    { name = "Lorne", email = "lornearnold@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "ipympl>=0.9.7",
    "manim>=0.19.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gsd_lib"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
