[project]
name = "gsd-lib"
version = "0.1.0"
description = "Minimal discrete match"
readme = "README.md"
authors = [
    { name = "Lorne", email = "lornearnold@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "ipympl>=0.9.7",
    "numpy>=1.20.0",
    "ipykernel>=6.31.0",
    "jupyter>=1.1.1",
    "scipy>=1.13.1",
    "pandas>=2.3.3",
    "matplotlib>=3.9.4",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gsd_lib"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
